# Projectsmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Current_Status.md  LICENSE  README.md  continue.md  copier.yaml  start_up_guide.md  start_up_prompt.md
template/: .gitignore  (+9 more)
template/{{project_slug}}/: .cursorignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CURSOR_RULES.md  Dockerfile  LICENSE  README.md  START_HERE.md  docker-compose.yml  pyproject.toml
template/{{project_slug}}/.agent-config/: README.md
template/{{project_slug}}/.claude/: settings.json
template/{{project_slug}}/.claude/agents/: architect.md  code-reviewer.md  researcher.md  test-runner.md
template/{{project_slug}}/.claude/commands/: change-summary.md  eod.md  init.md  review.md  status.md  verify.md
template/{{project_slug}}/.claude/hooks/: verify-reminder.ps1
template/{{project_slug}}/.cursor/commands/: eod.md  repo-map.md  review.md  status.md
template/{{project_slug}}/.cursor/prompts/: TEMPLATE_ADD_ENV_VAR.md  TEMPLATE_BUGFIX.md  TEMPLATE_INCIDENT_DEBUG.md
template/{{project_slug}}/.cursor/roles/: HANDOFF_NOTE_TEMPLATE.md  IMPLEMENTER.md  RESEARCHER.md  REVIEWER.md  REVIEW_CHECKLIST.md
template/{{project_slug}}/.github/: pull_request_template.md
template/{{project_slug}}/Lessons_Learned/: critical.md  notable.md  quality-of-life.md
template/{{project_slug}}/scripts/: e2e-install.ps1  e2e-install.sh  e2e-test.sh  e2e-ui.sh  verify.ps1
template/{{project_slug}}/security/: owasp-llm-controls.md  secrets-policy.md
template/{{project_slug}}/tests/: conftest.py
(+165 files in other folders)
