[project]
name = "{{ project_slug }}"
version = "0.1.0"
description = "{{ project_name }} - {% raw %}{{FILL: short project description}}{% endraw %}"
requires-python = ">={{ python_version }}"
readme = "README.md"
license = {text = "{{ license }}"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx",
    # {% raw %}{{FILL: Add project-specific dependencies below}}{% endraw %}
]

[project.scripts]
# {% raw %}{{FILL: Add CLI entry points here}}{% endraw %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["infra/cdk/cdk.out"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ['cdk\.out']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.15.3",
]